--- a/task-stage-1/12/style.css
+++ b/task-stage-1/12/style.css
@@ -68,8 +68,10 @@ img {
 .item2{
     display: flex;
     flex-direction: column;
+    /* justify-content: space-between; */
     border: 1px solid black;
 }
+
 .item2__name{
     margin-bottom: 10px;
     font-size: 18px;
@@ -90,4 +92,9 @@ img {
 }
 .item2__body{
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 auto;
+    justify-content: space-between;
+    border: 1px solid black;
 }
